Fixing Navbar overflow

--- a/website_frontend/src/components/Navbar/Navbar.module.css
+++ b/website_frontend/src/components/Navbar/Navbar.module.css
@@ -257,9 +257,9 @@
     }
 
     /* Show buttons when menu is open */
-    .headerRight.menuOpen {
+    /* .headerRight.menuOpen {
         display: flex;
-    }
+    } */
 
     .regButton,
     .logButton {
